--- a/HTML+CSS+JavaScript/resources/css/footinfoline.css
+++ b/HTML+CSS+JavaScript/resources/css/footinfoline.css
@@ -151,6 +151,7 @@ article, aside, details, figcaption, figure
 .tourEnterFooter .infoCol {
   text-align: left;
   padding: 10px;
+  
 }
 .tourEnterFooter .infoTitle {
   color: #111;
@@ -161,6 +162,23 @@ article, aside, details, figcaption, figure
   margin-top: 4px;
   color: #666;
   font-size: 12px;
+}
+.tourEnterFooter .infoContent p span:not(:first-child)::before {
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 4px;
+  width: 1px;
+  height: 14px;
+  background-color: #666;
+}
+.tourEnterFooter .infoContent a {
+  color: #666;
+  font-size: 12px;
+}
+.tourEnterFooter .infoContent .linkText {
+  color: #4a95ff;
+  text-decoration: underline;
 }
 h2 {
   display: block;
@@ -184,9 +202,9 @@ h2 {
 .tourEnterFooter .corpList .dropbtn {
   background-color: white;
   color: black;
-  padding: 16px;
   border: none;
   cursor: pointer;
+  font-size: 16px;
 }
 
 .tourEnterFooter .corpList .dropdown {
